# syfrah

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLOUD_HYPERVISOR_VERSION  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IDEA.md  LICENSE  README.md  SECURITY.md  buf.gen.yaml  buf.yaml  justfile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  e2e.yml  release.yml  sdk.yml  security.yml
api/: build-docs.sh  openapi.yaml  redocly.yaml
benchmarks/: PROD_READY_TESTS.md  report_20260326_194127.md  run.sh
contrib/: com.syfrah.daemon.plist  syfrah.service
crates/syfrah-cli/: Cargo.toml
crates/syfrah-cli/src/: main.rs
crates/syfrah-cli/src/commands/: init.rs  join.rs  leave.rs  mod.rs  status.rs
crates/syfrah-cli/src/commands/fabric/: join.rs  mod.rs  peering.rs  peers.rs  rotate.rs  start.rs  status.rs  stop.rs  token.rs
crates/syfrah-core/: Cargo.toml
crates/syfrah-core/src/: addressing.rs  mesh.rs  secret.rs
crates/syfrah-core/tests/: integration.rs
crates/syfrah-net/: Cargo.toml
crates/syfrah-net/src/: daemon.rs  discovery.rs  lib.rs  peering.rs  store.rs  wg.rs
crates/syfrah-net/tests/: integration.rs
dev/: Dockerfile  README.md  dev.sh  docker-compose.yml  e2e.sh  test-mesh.sh  test-topology.sh
doc/: 01-core-types.md  02-wireguard-wrapper.md  02-wireguard.md  03-discovery.md  03-peering.md  04-daemon.md  04-init-join.md  05-control-channel.md  05-daemon-commands.md  06-cli.md  06-operations.md
docs/: .gitignore  ARCHITECTURE.md  astro.config.mjs  documentation-strategy.md  package-lock.json  repository.md  state-and-reconciliation.md  sync.sh
docs/concepts/: cli.md  forge.md  zones-and-regions.md
documentation/: next.config.mjs  package-lock.json  types.d.ts
documentation/src/: navigation.json
documentation/src/app/: layout.tsx  not-found.tsx  page.mdx
documentation/src/components/: Breadcrumb.tsx  Code.tsx  Header.tsx  Layout.tsx  Logo.tsx  Navigation.tsx  PageTags.tsx  Search.tsx  TableOfContents.tsx  VersionSelector.tsx  mdx.tsx
documentation/src/mdx/: search.mjs
handbook/: ARCHITECTURE.md  api-architecture.md  ci.md  cli.md  compute-quickstart.md  configuration.md  documentation-strategy.md  external-api.md  image-management.md  local-dev.md  proto-strategy.md  regions-and-zones.md  releasing.md  repository.md  sdk-generation.md  state-and-reconciliation.md  state-store.md  storage-engine.md  testing.md  workflow.md
layers/api/: Cargo.toml
layers/api/src/: apikey.rs  auth.rs  error.rs  handler.rs  lib.rs  rate_limit.rs  router.rs  transport.rs
layers/compute/: Cargo.toml  README.md  build.rs
layers/compute/proto/: compute.proto
layers/compute/src/: api.rs  binary.rs  boot.rs  client.rs  config.rs  control.rs  disk.rs  error.rs  events.rs  handler.rs  lib.rs  manager.rs  phase.rs  preflight.rs  process.rs  runtime.rs  runtime_backend.rs  runtime_ch.rs  runtime_container.rs  test_utils.rs  types.rs
layers/compute/src/cli/: image.rs  mod.rs  vm.rs
layers/compute/src/image/: catalog.rs  delete.rs  error.rs  import.rs  mod.rs  pull.rs  store.rs  types.rs
layers/compute/tests/: e2e_kvm.rs  provisioning.rs
layers/controlplane/: README.md
layers/core/: Cargo.toml  README.md
layers/core/benches/: crypto_bench.rs
layers/core/src/: addressing.rs  identity.rs  lib.rs  mesh.rs  secret.rs
layers/fabric/: Cargo.toml  README.md
layers/fabric/benches/: fabric_bench.rs
layers/fabric/proto/: fabric.proto
layers/fabric/src/: audit.rs  auth_middleware.rs  config.rs  control.rs  daemon.rs  events.rs  grpc_api.rs  http_api.rs  lib.rs  metrics.rs  peering.rs  sanitize.rs  sd_watchdog.rs  store.rs  topology.rs  ui.rs  wg.rs
layers/fabric/src/cli/: audit.rs  diagnose.rs  events.rs  hosts.rs  init.rs  join.rs  leave.rs  metrics.rs  mod.rs  peering.rs  peers.rs  peers_remove.rs  peers_update.rs  reload.rs  rotate.rs  service.rs  start.rs  status.rs  stop.rs  token.rs  topology.rs  ui.rs  zone.rs
layers/fabric/tests/: auth_gateway.rs  peering_protocol.rs  store_atomicity.rs  zones_regions.rs
layers/forge/: Cargo.toml  README.md
layers/forge/proto/: forge.proto
layers/forge/src/: api.rs  lib.rs
layers/iam/: README.md
layers/org/: Cargo.toml  README.md
layers/org/proto/: org.proto
layers/org/src/: api.rs  lib.rs
layers/overlay/: Cargo.toml  README.md
layers/overlay/proto/: overlay.proto
layers/overlay/src/: api.rs  lib.rs
layers/products/: README.md
layers/state/: Cargo.toml  README.md
layers/state/src/: lib.rs
layers/state/src/cli/: drop.rs  get.rs  list.rs  mod.rs
layers/state/tests/: advanced.rs  cli_integration.rs
layers/storage/: Cargo.toml  README.md
layers/storage/proto/: storage.proto
layers/storage/src/: api.rs  lib.rs
post_release_audit/: audit_qa_ux_release_0.4.0.md
scripts/: gen-openapi.py  gen-openapi.sh  gen-proto-docs.sh  install.sh  setup-compute-e2e.sh  sync-docs.sh
sdk/go/: README.md
sdk/js/: README.md
sdk/python/: README.md
sdk/rust/: README.md
site/: build.sh  style.css  template.html
tests/: README.md
tests/e2e/: Dockerfile  docker-compose.yml  fake-cloud-hypervisor.py  lib.sh  run-50.sh  run.sh
tests/e2e/fake-ch/: Cargo.toml
tests/e2e/scenarios/: 01_fabric_mesh_formation.sh  01_mesh_formation.sh  02_fabric_mesh_connectivity.sh  03_fabric_node_leave.sh  03_node_leave.sh  04_daemon_restart.sh  04_fabric_daemon_restart.sh  05_fabric_large_mesh.sh  05_large_mesh.sh  06_fabric_network_partition.sh  06_network_partition.sh  07_concurrent_joins.sh  07_fabric_concurrent_joins.sh  08_fabric_secret_rotation.sh  09_fabric_state_corruption.sh  09_state_corruption.sh  100_ux_flow_reboot.sh  101_ux_flow_scaling.sh  102_ux_flow_pin_onboarding.sh  103_ux_flow_secret_rotation.sh  104_ux_flow_churn.sh  105_ux_errors_init.sh  106_ux_errors_join.sh  107_ux_errors_lifecycle.sh  108_ux_errors_commands.sh  109_ux_errors_no_raw_errors.sh  10_fabric_stale_pid.sh  10_stale_pid.sh  (+81 more)
tests/helpers/: mod.rs
(+65 files in other folders)
