[workspace]
resolver = "2"
members = [
    "layers/api",
    "layers/core",
    "layers/state",
    "layers/fabric",
    "bin/syfrah",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sifrah/syfrah"
keywords = ["cloud", "wireguard", "mesh", "control-plane", "infrastructure"]
categories = ["network-programming", "command-line-utilities"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
