[package]
name = "syfrah-api"
description = "API error types and structured responses for Syfrah"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rand = "0.8"

[dev-dependencies]
serde_json.workspace = true
