[package]
name = "syfrah-state"
description = "Embedded state persistence for Syfrah layers (redb wrapper)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
redb = "3"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dirs = "6"

[dev-dependencies]
tempfile = "3"
